<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/card_menu_layout"
        android:layout_width="@dimen/card_menu_width"
        android:layout_height="match_parent"
        android:minHeight="@dimen/card_min_height"
        android:maxHeight="@dimen/card_max_height"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_gravity="right"/>

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_bg_color"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        app:cardElevation="@dimen/elevation_little"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_xlarge"
            android:paddingBottom="@dimen/padding_xlarge"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:minHeight="@dimen/card_min_height"
            android:maxHeight="@dimen/card_max_height"
            >
            <ImageView
                android:id="@+id/iv_card_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_menu_more_18"/>
            <TextView
                android:id="@+id/tv_extra"
                style="@style/ExtraTextStyle"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:gravity="center"
                android:background="@color/colorRedDark"
                android:text="@string/tip_private"
                android:layout_toLeftOf="@+id/iv_card_menu"
                android:visibility="visible"
                />
            <TextView
                android:id="@+id/tv_card_title"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/tv_extra"
                android:layout_toLeftOf="@id/tv_extra"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="@string/title_sample" />
            <TextView
                android:id="@+id/tv_card_content"
                style="@style/ContentTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_below="@+id/tv_card_title"
                android:maxLines="@integer/card_max_line"
                android:ellipsize="end"
                tools:text="@string/content_sample"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</merge>